feat: create clients api route
